--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,18 @@ td#metabox div.officehours {
     font-size: 16px;
 }
 
+.right {
+    float: right;
+}
+
+img {
+    background: white;
+    padding: 5px;
+    -moz-box-shadow: 0px 0px 5px #c7c7c7;
+    -webkit-box-shadow: 0px 0px 5px #c7c7c7;
+    box-shadow: 0px 0px 5px #c7c7c7;
+}
+
 .post-title {
     font-size: 18px;
     margin-right: 10px;
