Added/translated more notes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -78,7 +78,7 @@
                     <div class="post-title"><a href="/notes/k-means.html">K-means clustering</a></div>
                   </li>
                   <li>
-                    <div class="post-title"><a href="/notes/weka.html">Weka</a></div>
+                    <div class="post-title"><a href="/notes/weka-clustering.html">Weka for clustering</a></div>
                   </li>
                 </ul>
               </li>
@@ -90,6 +90,17 @@
                   </li>
                   <li>
                     <div class="post-title"><a href="/notes/decision-trees.html">Decision trees</a></div>
+                  </li>
+                  <li>
+                    <div class="post-title"><a href="/notes/weka-classification.html">Weka for classification</a></div>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <div class="post-title"><a href="/notes/text-processing.html">Text processing</a></div>
+                <ul>
+                  <li>
+                    <div class="post-title"><a href="/notes/weka-text-processing.html">Weka for text processing</a></div>
                   </li>
                 </ul>
               </li>
