Translated some more notes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -86,6 +86,9 @@
                 <div class="post-title"><a href="/notes/classification.html">Learning to classify data</a></div>
                 <ul>
                   <li>
+                    <div class="post-title"><a href="/notes/classification-evaluation.html">Classification evaluation</a></div>
+                  </li>
+                  <li>
                     <div class="post-title"><a href="/notes/k-nn.html">K-nearest neighbor classification</a></div>
                   </li>
                   <li>
