Added more content

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -142,9 +142,7 @@
             <div class="email"><b><a href="mailto:jeckroth@stetson.edu">jeckroth@stetson.edu</a></b></div>
             <div class="officehours">
               Office hours:<br/>
-              Mon: 2:30-3:30<br/>
-              Tue: 12-2<br/>
-              Thur: 1-2
+              Mon/Wed 12-2:30
             </div>
           </td>
         </tr>
