Updatd Prolog notes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -55,11 +55,8 @@
                 </ul>
               </li>
               <li>
-                <div class="post-title"><a href="/notes/programming-symbolically.html">Programming symbolically</a></div>
+                <div class="post-title"><a href="/notes/prolog.html">Logic programming with Prolog</a></div>
                 <ul>
-                  <li>
-                    <div class="post-title"><a href="/notes/prolog.html">Prolog</a></div>
-                  </li>
                   <li>
                     <div class="post-title"><a href="/notes/prolog-unification.html">Prolog unification</a></div>
                   </li>
