Wrote more notes about prolog

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -63,6 +63,9 @@
                   <li>
                     <div class="post-title"><a href="/notes/prolog-resolution.html">Prolog resolution</a></div>
                   </li>
+                  <li>
+                    <div class="post-title"><a href="/notes/prolog-examples.html">Prolog examples</a></div>
+                  </li>
                 </ul>
               </li>
               <li>
