Finished midterm guide and solutions

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -144,7 +144,8 @@
             <ul class="posts">
               <li>
                 <div class="post-title"><a href="/guide/midterm-review.html">Midterm review</a></div>
-                <div class="post-due">Wed Oct 28</div>
+                <div class="post-title"><a href="/guide/midterm-review-solutions.html">Midterm review solutions</a></div>
+                <div class="post-due">Wed Oct 26</div>
               </li>
               <li>
                 <div class="post-title"><a href="/guide/final-review.html">Final review</a></div>
