Added midterm for fall 2016

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -145,7 +145,8 @@
               <li>
                 <div class="post-title"><a href="/guide/midterm-review.html">Midterm review</a></div>
                 <div class="post-title"><a href="/guide/midterm-review-solutions.html">Midterm review solutions</a></div>
-                <div class="post-due">Wed Oct 26</div>
+                <div class="post-title"><a href="/tests/midterm-fall-2016.html">Midterm for Fall 2016</a></div>
+                <div class="post-due">Due Fri Oct 28, 11:59pm</div>
               </li>
               <li>
                 <div class="post-title"><a href="/guide/final-review.html">Final review</a></div>
