--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -69,21 +69,10 @@
                 </ul>
               </li>
               <li>
-                <div class="post-title"><a href="/notes/abductive-reasoning.html">Abductive reasoning</a></div>
+                <div class="post-title"><a href="/notes/bayesian-inference.html">Reasoning with uncertainty</a></div>
                 <ul>
                   <li>
-                    <div class="post-title"><a href="/notes/paragon.html">Paragon</a></div>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <div class="post-title"><a href="/notes/clustering.html">Discovering clusters of data</a></div>
-                <ul>
-                  <li>
-                    <div class="post-title"><a href="/notes/k-means.html">K-means clustering</a></div>
-                  </li>
-                  <li>
-                    <div class="post-title"><a href="/notes/weka-clustering.html">Weka for clustering</a></div>
+                    <div class="post-title"><a href="/notes/problog.html">ProbLog</a></div>
                   </li>
                 </ul>
               </li>
@@ -114,14 +103,6 @@
               </li>
               <li>
                 <div class="post-title"><a href="/notes/neural-networks.html">Classifying with neural networks</a></div>
-              </li>
-              <li>
-                <div class="post-title"><a href="/notes/bayesian-inference.html">Inferring causation</a></div>
-                <ul>
-                  <li>
-                    <div class="post-title"><a href="/notes/naive-bayesian.html">Naïve Bayesian classification</a></div>
-                  </li>
-                </ul>
               </li>
               <li>
                 <div class="post-title"><a href="/notes/robotics.html">Doing robotics</a></div>
