Wrote about feature engineering

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -83,6 +83,9 @@
                     <div class="post-title"><a href="/notes/classification-evaluation.html">Classification evaluation</a></div>
                   </li>
                   <li>
+                    <div class="post-title"><a href="/notes/feature-engineering.html">Feature engineering</a></div>
+                  </li>
+                  <li>
                     <div class="post-title"><a href="/notes/k-nn.html">K-nearest neighbor classification</a></div>
                   </li>
                   <li>
