Updated naive bayes notes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -92,6 +92,9 @@
                     <div class="post-title"><a href="/notes/decision-trees.html">Decision trees</a></div>
                   </li>
                   <li>
+                    <div class="post-title"><a href="/notes/naive-bayesian.html">Naïve Bayesian classification</a></div>
+                  </li>
+                  <li>
                     <div class="post-title"><a href="/notes/weka-classification.html">Weka for classification</a></div>
                   </li>
                 </ul>
