Updated A09, wrote about bagging

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -95,6 +95,9 @@
                     <div class="post-title"><a href="/notes/naive-bayesian.html">Naïve Bayesian classification</a></div>
                   </li>
                   <li>
+                    <div class="post-title"><a href="/notes/bagging-techniques.html">Bagging techniques</a></div>
+                  </li>
+                  <li>
                     <div class="post-title"><a href="/notes/weka-classification.html">Weka for classification</a></div>
                   </li>
                 </ul>
