--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -95,7 +95,7 @@
                     <div class="post-title"><a href="/notes/naive-bayesian.html">Naïve Bayesian classification</a></div>
                   </li>
                   <li>
-                    <div class="post-title"><a href="/notes/bagging-techniques.html">Bagging techniques</a></div>
+                    <div class="post-title"><a href="/notes/ensemble-techniques.html">Ensemble techniques</a></div>
                   </li>
                   <li>
                     <div class="post-title"><a href="/notes/weka-classification.html">Weka for classification</a></div>
