--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -112,10 +112,17 @@
               </li>
               <li>
                 <div class="post-title"><a href="/notes/neural-networks.html">Classifying with neural networks</a></div>
+                <ul>
+                  <li>
+                    <div class="post-title"><a href="/notes/deep-learning.html">Deep learning</a></div>
+                  </li>
+                </ul>
               </li>
+    <!--
               <li>
                 <div class="post-title"><a href="/notes/robotics.html">Doing robotics</a></div>
               </li>
+    -->
             </ul>
           </td>
           <td>
