Wrote final exam

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -147,7 +147,8 @@
               </li>
               <li>
                 <div class="post-title"><a href="/guide/final-review.html">Final review</a></div>
-                <div class="post-due">Tue Dec 13 1-3pm</div>
+                <div class="post-title"><a href="/tests/final-fall-2016.html">Final exam for Fall 2016</a></div>
+                <div class="post-due">Due Thur Dec 15, 11:59pm</div>
               </li>
             </ul>
           </td>
