Added more prolog notes and assignment 02

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -29,7 +29,16 @@
                     <div class="post-title"><a href="/notes/prolog-resolution.html">Prolog resolution</a></div>
                   </li>
                   <li>
-                    <div class="post-title"><a href="/notes/prolog-examples.html">Prolog examples</a></div>
+                    <div class="post-title"><a href="/notes/biductive-prolog.html">Biductive Prolog</a></div>
+                  </li>
+                  <li>
+                    <div class="post-title"><a href="/notes/prolog-parsing.html">Prolog Parsing</a></div>
+                  </li>
+                  <li>
+                    <div class="post-title"><a href="/notes/problog.html">ProbLog</a></div>
+                  </li>
+                  <li>
+                    <div class="post-title"><a href="/notes/prolog-examples.html">Misc examples</a></div>
                   </li>
                 </ul>
               </li>
