Added office hours

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -68,7 +68,8 @@
                   <a href="mailto:jeckroth@stetson.edu">jeckroth@stetson.edu</a>
                 </p>
                 <p>
-                  Office hours: TBD
+                Office hours:<br/>
+                Mon 1-2, Tue 5:30-6, Wed 2-3, Thur 5:30-6
                 </p>
               </div>
             </div>
