Added Bayesian inference notes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,12 +35,17 @@
                     <div class="post-title"><a href="/notes/prolog-parsing.html">Prolog Parsing</a></div>
                   </li>
                   <li>
-                    <div class="post-title"><a href="/notes/problog.html">ProbLog</a></div>
-                  </li>
-                  <li>
                     <div class="post-title"><a href="/notes/prolog-examples.html">Misc examples</a></div>
                   </li>
                 </ul>
+              </li>
+              <li>
+                  <div class="post-title"><a href="/notes/bayesian-inference.html">Bayesian inference</a></div>
+                  <ul>
+                      <li>
+                          <div class="post-title"><a href="/notes/problog.html">ProbLog</a></div>
+                      </li>
+                  </ul>
               </li>
             </ul>
         </div>
