Added naive bayes notes and midterm guide

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -45,6 +45,9 @@
                       <li>
                           <div class="post-title"><a href="/notes/problog.html">ProbLog</a></div>
                       </li>
+                      <li>
+                          <div class="post-title"><a href="/notes/naive-bayesian.html">Naïve Bayesian inference</a></div>
+                      </li>
                   </ul>
               </li>
             </ul>
@@ -60,6 +63,13 @@
               </li>
               {% endif %}
               {% endfor %}
+            </ul>
+            <h2>Guides</h2>
+            <ul class="posts">
+                <li>
+                    <div class="post-title"><a href="/guide/midterm-review-fall2017.html">Midterm review</a></div>
+                    <div class="post-due">Start Oct 11, due Oct 13 (takehome exam)</div>
+                </li>
             </ul>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
