Added midterm for fall 2017

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -68,7 +68,13 @@
             <ul class="posts">
                 <li>
                     <div class="post-title"><a href="/guide/midterm-review-fall2017.html">Midterm review</a></div>
-                    <div class="post-due">Start Oct 11, due Oct 13 (takehome exam)</div>
+                </li>
+            </ul>
+            <h2>Tests</h2>
+            <ul class="posts">
+                <li>
+                    <div class="post-title"><a href="/tests/midterm-fall-2017.html">Midterm Fall 2017</a></div>
+                    <div class="post-due">Start Oct 11, due Oct 13 11:59pm<br/>(takehome exam)</div>
                 </li>
             </ul>
         </div>
