--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -50,6 +50,12 @@
                       </li>
                   </ul>
               </li>
+              <li>
+                  <div class="post-title"><a href="/notes/classification.html">Classification</a></div>
+              </li>
+              <li>
+                  <div class="post-title"><a href="/notes/decision-trees.html">Decision trees</a></div>
+              </li>
             </ul>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
