Added A06 and text processing notes

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -32,7 +32,7 @@
                     <div class="post-title"><a href="/notes/biductive-prolog.html">Biductive Prolog</a></div>
                   </li>
                   <li>
-                    <div class="post-title"><a href="/notes/prolog-parsing.html">Prolog Parsing</a></div>
+                    <div class="post-title"><a href="/notes/prolog-parsing.html">Prolog parsing</a></div>
                   </li>
                   <li>
                     <div class="post-title"><a href="/notes/prolog-examples.html">Misc examples</a></div>
@@ -55,6 +55,9 @@
               </li>
               <li>
                   <div class="post-title"><a href="/notes/decision-trees.html">Decision trees</a></div>
+              </li>
+              <li>
+                  <div class="post-title"><a href="/notes/text-processing.html">Text processing</a></div>
               </li>
             </ul>
         </div>
