Added notes about neural networks and deep learning

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -59,6 +59,14 @@
               <li>
                   <div class="post-title"><a href="/notes/text-processing.html">Text processing</a></div>
               </li>
+              <li>
+                  <div class="post-title"><a href="/notes/neural-networks.html">Neural networks</a></div>
+                  <ul>
+                      <li>
+                          <div class="post-title"><a href="/notes/deep-learning.html">Deep learning</a></div>
+                      </li>
+                  </ul>
+              </li>
             </ul>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
