Added final for fall 2017

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -90,6 +90,10 @@
             <h2>Tests</h2>
             <ul class="posts">
                 <li>
+                    <div class="post-title"><a href="/tests/final-fall-2017.html">Final Fall 2017</a></div>
+                    <div class="post-due">Start Dec 11, due Dec 14 11:59pm<br/>(takehome exam)</div>
+                </li>
+                <li>
                     <div class="post-title"><a href="/tests/midterm-fall-2017.html">Midterm Fall 2017</a></div>
                     <div class="post-due">Start Oct 11, due Oct 13 11:59pm<br/>(takehome exam)</div>
                 </li>
