--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -81,6 +81,7 @@
               {% endif %}
               {% endfor %}
             </ul>
+            {% comment %}
             <h2>Guides</h2>
             <ul class="posts">
                 <li>
@@ -98,20 +99,21 @@
                     <div class="post-due">Start Oct 11, due Oct 13 11:59pm<br/>(takehome exam)</div>
                 </li>
             </ul>
+            {% endcomment %}
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="row">
             <div class="card">
               <div class="section">
                   <h1>CSCI 431</h1>
-                  <h3>Fall 2017</h3>
+                  <h3>Fall 2019</h3>
                 <p>
                   <a href="http://www2.stetson.edu/~jeckroth/" target="_blank">Dr. Joshua Eckroth</a><br/>
                   <a href="mailto:jeckroth@stetson.edu">jeckroth@stetson.edu</a>
                 </p>
                 <p>
                 Office hours:<br/>
-                Mon 1-3, Tue 5:30-6, Wed 2-3, Thur 5:30-6
+                TBD
                 </p>
               </div>
             </div>
