Added final review

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -87,6 +87,10 @@
                     <div class="post-title"><a href="/guide/midterm-review-fall2019.html">Midterm review</a></div>
                     <div class="post-due">Oct 23, in-class</div>
                 </li>
+                <li>
+                    <div class="post-title"><a href="/guide/final-review-fall2019.html">Final review</a></div>
+                    <div class="post-due">Wed, Dec 11 (5p-7p)</div>
+                </li>
             </ul>
             {% comment %}
             <h2>Tests</h2>
